--- a/style.css
+++ b/style.css
@@ -21,14 +21,17 @@ header .btn:hover{
   /*margin:auto;*/
 }
 header {
-  height: 10%;
+  height: 60px;
   width: 100%;
   position :fixed;
   top: 0;
   z-index: 10;
+  opacity:0.8;
+  background:#fff;
 }
 .container{
   text-align: center;
+  font-weight: bold;
 }
 .top-wrapper p{
   color: #b3aeb5;
@@ -97,8 +100,38 @@ height:60px;
 .voice h2{
   font-size:34px;
 }
-.pagetop-btn {
-    width: 30px;
-    height: auto;
-    vertical-align: middle;
+/*トップに戻るボタン*/
+#page_top{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background: rgba(180,180,180,0.8);
+  opacity: 0.6;
+  border-radius: 50%;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+#page_top a{
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+}
+#page_top a::before{
+  font-family: FontAwesome;
+  content: '\f106';
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
 }
